# Crop-Intelligence-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  render.yaml
backend/: .env.example  README.md  alembic.ini  cli.py  load_test.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 168325441554_create_farms_table.py  50470d803d2e_add_yield_predictions_table.py
backend/app/: dependencies.py  main.py
backend/app/api/: farms.py  forecast.py  health.py  ml.py
backend/app/core/: cache.py  config.py  logging.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/engines/: __init__.py
backend/app/models/: farm.py  yield_prediction.py
backend/app/schemas/: farm.py  prediction.py  satellite.py
backend/app/services/: cache_service.py  drift_service.py  et0_service.py  farm_service.py  forecast_service.py  geometry_service.py  intelligence_engine.py  lstm_model.py  (+5 more)
backend/docs/: performance_report.md
backend/logs/: prediction_log.jsonl
backend/ml/: __init__.py  model.py  train.py
backend/scripts/: explore_data.py  verify_model.py
backend/static/: index.html
backend/tests/: conftest.py  test_advisory_engine.py  test_cache_service.py  test_crop_engine.py  test_disease_engine.py  test_drift_monitoring.py  test_ensemble_service.py  test_farm_service.py  test_fertilizer_engine.py  test_geometry_service.py  test_intelligence_engine.py  test_market_engine.py  test_ml_api.py  test_satellite_service.py  test_soil_engine.py  test_weather_engine.py  test_weather_service.py
ml/: Makefile  (+3 more)
(+122 files in other folders)
