[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-intelligence-backend"
version = "0.1.0"
description = "Crop Intelligence Platform — FastAPI Backend Service"
requires-python = ">=3.12"

[project.scripts]
crop-intel = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_deprecated", "venv", "__pycache__"]
asyncio_mode = "auto"
